--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,10 +26,14 @@
     <string name="aceptar">Aceptar</string>
     <string name="cancelar">Cancelar</string>
 
+    <string name="pronunciar">Pronunciar</string>
+
     //Acividades
     <string name="actividadImagen">Adivina la imagen</string>
     <string name="actividadPregunta">Preguntas</string>
     <string name="actividadLetras">Repasemos las letras</string>
     <string name="actividadPintar">Pinta</string>
+
+    <string name="imagenInstruccion">Pulsa el boton y pronuncia el nombre de la imagen</string>
 
 </resources>
