Dialogo continuar actividad imagen - puntuacion basica - inicio otras actividades -correccion imagenes tildes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,7 @@
     <string name="imagenInstruccion">Pulsa el botón y pronuncia el nombre de la imagen</string>
 
     <string name="hablaAhora">Habla ahora</string>
+    <string name="puntos">Puntuacion: </string>
+    <string name="continuar">Continuar</string>
 
 </resources>
