carga de preguntas y mejora de puntuacion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,7 @@
     <string name="EstoyListoCuentos">Estoy Listo</string>
     <string name="otroCuento">Otro Cuento</string>
 
+    <string name="TituloPreguntasCuentos">Contesta las preguntas</string>
+    <string name="contestar">Ya se la respuesta</string>
+
 </resources>
